style.css
body {
  margin:0;
  background-color: lightgray;
  overflow-x: hidden;
}

.main-header {
    display: grid;
    grid-template-columns: repeat(6, 1fr);
    height: 150px;
}

.header-grid {
    border: 1px;
    background-color: lightgray;
    padding: 10px;
    float: left;
    text-align: center;
    padding-top: 60px;
    font-family: sans-serif;
    font-size: 25px;
    font-weight: 400px;
}

#topics {
    border: 2px solid;
}

.articles {
  display: grid;
  grid-template: repeat(2, 1fr) / repeat(50, 1fr);
  width: 100%;
  height: 1200px;
}

.wrote {
  text-align: center;
}

.Wa {
  background-color: #C0C0C0;
  grid-area: 1 / 1 / 1 / 27;
}

.Wb {
  background-color: gainsboro;
  grid-area: 1 / 26 / 1 / 51;
}

.Wc {
  background-color: gray;
  grid-area: 2 / 1 / 2 / 26;

}

.Wd {
  background-color: darkgray;
  grid-area: 2 / 26 / 2 / 51;
}

.latest {
  grid-area: 1 / 20 / 1 /32;
  background-color: white;
  z-index: 10;
  height: 100px;
  margin-top: 50px;
}

.Wa h1,
.Wb h1,
.Wc h1,
.Wd h1 {
  padding-top: 230px;
}

.articles2 {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  width: 100%;
  height: 500px;
}

.articles2 p {
  font-size: 23px;
  margin-left: 30px;
  margin-right: 30px;
  line-height: 1.8;
}

.articles2 h2 {
  margin-left: 30px;
}
.explore {
  display: grid;
  width: 100%;
  height: 700px;
  grid-template: repeat(13, 1fr) / repeat(20, 1fr);
}

.Ma {
  background-color: grey;
  grid-area: 2 / 8 / span 11 / span 12;
  text-align: center;
}

.Ma h1 {
  padding-top: 200px;
}

.Ma p {
  font-size: 25px;
}

.Fa {
  background-color: grey;
  grid-area: 3 / 2 / span 4 / span 5;
  text-align: center;
}

.articles3 {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  width: 100%;
  height: 500px;
}

.articles3 p {
  font-size: 23px;
  margin-left: 30px;
  margin-right: 30px;
  line-height: 1.8;
}

.articles3 h2 {
  margin-left: 30px;
}

.articles3A {
  display: grid;
  width: 100%;
  height: 700px;
  grid-template: repeat(13, 1fr) / repeat(20, 1fr);
}

.tv {
  background-color: grey;
  grid-area: 1 / 8 / span 11 / span 12;
  text-align: center;
}

.tv h1 {
  padding-top: 200px;
}

.tv p {
  font-size: 25px;
}

.articles3A p {
  font-size: 23px;
  margin-left: 30px;
  line-height: 1.8;
}

.articles3A h2 {
  margin-left: 30px;
}

.Bg {
  grid-area: 1 / 1 / span 2 / span 6;
}

.see_all {
  text-align: center;
  text-decoration: underline red;
  padding: 65px;
}

.smashing {
  background-color: grey;
  text-align: center;
  height: 800px;
}

.print {
  text-decoration: underline;
  font-size: 40px;
}

.week_title {
  margin-left: 20%;
  font-size: 20px;
  color: grey;
}

.authors_stories {
  display: grid;
  grid-template: repeat(2, 1fr) / repeat(2, 1fr);
  padding: 100px ;
}

.week {
  margin-left: 20%;
  font-size: 22px;
  width: 60%;
}

.person_of_the_week {
  padding: 55px;
}

.ispiring,
.meaning,
.logical,
.minimalist,
.creat,
.web {
  margin-left: 95px;
  padding: 30px;
}

.author {
  color: gray;
  text-decoration: underline;
}

.author-paragraph {
  font-size: 20px;
  width: 100%;
}

.twitter-link {
  text-align: center;
  padding: 50px;
  text-decoration: underline red;
}

.design_system {
  background-color: grey;
  height: 350px;
}

.guides {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  width: 100%;
  height: 500px;
  padding: 45px;
}

.newsletter {
  display: grid;
  width: 100%;
  height: 900px;
  grid-template: repeat(30, 1fr)/ repeat(30, 1fr);
}

.letter {
  text-align: center;
}

.Gd {
  padding-left: 45px;
  grid-area: 1 / 1 / span 7 / span 9;
}

.Na {
  background-color: grey;
  grid-area: 1 / 12 / span 35 / span 18;
}

.see-all {
  text-align: center;
  padding-top: 65px;
  padding-bottom: 65px;
  text-decoration: underline;
}

.browser {
  background-color:  darkgray;
  padding-bottom: 20px;
  color: black;
}

.footer1,
.footer2,
.footer3,
.footer4,
.footer5,
.footer-last {
  text-align: center;
  margin: 35px;
}

.list1 {
  display: inline;
  padding: 15px;
}

.list2 {
  display: inline;
  padding: 16px;
}

.list3 {
  display: inline;
  padding: 13px;
}

.list4 {
  display: inline;
  padding: 9px;
}

.footer_paragraph, .footer-last {
  text-align: center;
}

.footer5 {
  text-align: center;
}

.list5 {
  display: inline;
  padding: 20px;
}

.list6 {
  display: inline;
  padding: 10px;
}

.list-link1,
.list-link2,
.list-link3,
.list-link4,
.list-link5,
.list-link6 {
  text-decoration: none;
  color: black !important;
  font-size: 20px;
}

.list-link5,
.list-link6 {
  text-decoration: underline;
}

#footer_heading {
 padding:25px;
}

h1,
h2,
h3,
h4 {
  font-family: 'Concert One', cursive;
}

.guide ul {
  font-size: 25px;
  text-decoration: underline;
  text-decoration-color: blue;
}

.Na p {
  font-size: 22px;
}

.system p {
  font-size: 25px;
}

.system {
  padding-left: 60px;
}

.front-end li,
.opti li,
.workflow li,
.design li {
  padding-top: 15px;
  color: blue;
}

#coming_next {
  padding-top: 90px;
}

.smash_paragraph {
  font-size: 30px;
}

